clusters/cl01tl/manifests/booklore/Namespace-booklore.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booklore
  annotations:
    volsync.backube/privileged-movers: "true"
  labels:
    app.kubernetes.io/name: booklore
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/part-of: booklore
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
