clusters/cl01tl/manifests/booklore/Service-booklore.yaml
---
# Source: booklore/charts/booklore/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
  labels:
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: booklore
    app.kubernetes.io/service: booklore
    helm.sh/chart: booklore-4.5.0
  namespace: booklore
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 6060
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
