clusters/cl01tl/manifests/booklore/Service-garage-ps10rp.yaml
---
# Source: booklore/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-ps10rp
  namespace: booklore
  labels:
    app.kubernetes.io/name: garage-ps10rp
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/part-of: booklore
  annotations:
    tailscale.com/tailnet-fqdn: garage-ps10rp.boreal-beaufort.ts.net
spec:
  externalName: placeholder
  type: ExternalName
