clusters/cl01tl/manifests/booklore/HTTPRoute-booklore.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booklore
  labels:
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: booklore
    helm.sh/chart: booklore-4.5.0
  namespace: booklore
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "booklore.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: booklore
          namespace: booklore
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
