clusters/cl01tl/manifests/booklore/HTTPRoute-http-route-booklore.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-booklore
  namespace: booklore
  labels:
    app.kubernetes.io/name: http-route-booklore
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/part-of: booklore
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - booklore.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: booklore
          port: 80
          weight: 100
